[project]
name = "c"
version = "0.0.1"
description = "Trail cocotb design project"
authors = [{name = "Stephen Henry", email = "stephenry@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9,<3.13"
# optional: add classifiers, license, etc. later

[tool.poetry]
# Keep this if you need any Poetry-only features (e.g. scripts, plugins later)
# You can actually remove most of it now that core metadata is in [project]
packages = [
    { include = "tb", from = "src" },
]

[dependency-groups]
dev = [
    "cocotb >=2.0.1,<3.0.0",
    "pyyaml >=6.0.3,<7.0.0",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[build-system]
requires = ["poetry-core >=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
tb = "tb.__main__:main"
syn = "syn.__main__:main"
