[project]
name = "c"
version = "0.1.0"
description = "Trial cocotb design project"
authors = [
    {name = "Stephen Henry",email = "stephenry@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cocotb (>=2.0.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
